<resources>
    <string name="BT_is_not_turned_on">Bluetooth is not turned on</string>
    <string name="LOADING">Loading...</string>
    <string name="Launch">Here\'s How to Pair:\n\nStep 1: Download Samsung Gear App from Google Playstore to your phone. For non-Samsung phone user, please also download Samsung Accessory Service and Gear S Plugin Apps.\n\nStep 2: Launch Samsung Gear App on your phone. Go to \"SETTINGS\" Tab and choose Samsung Galaxy App. Then search and download eGeeTouch Manager App. \n\nStep 3: Launch eGeeTouch App on your phone to connect with eGeeTouch lock.\n\nStep 4: Launch eGeeTouch App on the watch. \n\nThe smart lock will automatically connect with your phone and watch.</string>
    <string name="Lock_Setting">Lock Setting</string>
    <string name="Lock_auto_shutdown_time">Lock Auto-Shutdown Time</string>
    <string name="Lock_reconnecting_period">Lock Auto-Reconnecting Period</string>
    <string name="NFC_is_not_turned_on">NFC is not turned on</string>
    <string name="N_A">N.A.</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="access_locks">Access Logs</string>
    <string name="acessibility_recurrence_choose_end_date_description">change end date</string>
    <string name="action_settings">Settings</string>
    <string name="add_a_tag">Add a Tag</string>
    <string name="add_a_user">Add User</string>
    <string name="add_lock">Add Lock</string>
    <string name="add_lock_choose_model">Choose eGeeTouch Model</string>
    <string name="add_lock_choose_model2">Give your eGeeTouch a name</string>
    <string name="add_lock_choose_model3">Enter Primary Password</string>
    <string name="add_lock_choose_model4">Power on Device</string>
    <string name="add_lock_name">Enter Name</string>
    <string name="add_lock_password">Enter Primary Password provided</string>
    <string name="add_passcode">Add Passcode</string>
    <string name="add_passcode_jp">Add Passcode</string>
    <string name="add_recipient">Add Recipient</string>
    <string name="add_tag">Add Tag</string>
    <string name="add_user">Add Recipient</string>
    <string name="added">Added successfully!</string>
    <string name="address">Address</string>
    <string name="admin_you">Administrator/Shared Access</string>
    <string name="advertising_time_0">15 Sec</string>
    <string name="advertising_time_1">1 Min</string>
    <string name="advertising_time_10">10 Min</string>
    <string name="advertising_time_15min">15 Min</string>
    <string name="advertising_time_2">2 Min</string>
    <string name="advertising_time_3">3 Min</string>
    <string name="advertising_time_30">30 Sec</string>
    <string name="advertising_time_30min">30 Min</string>
    <string name="advertising_time_3min">3 Min</string>
    <string name="advertising_time_5">5 Min</string>
    <string name="advertising_time_one">1.0</string>
    <string name="agree_in_japanese" />
    <string name="allowed">ALLOWED</string>
    <string name="already_exists">Already exists</string>
    <string name="already_have_an_account">Already Have an Account?</string>
    <string name="ampm_circle_radius_multiplier">0.19</string>
    <string name="an_exclusive_offer_for_existing_egeetouch_manager_app_users_to_upgrade_for_free_to_commercial_grade_intelligent_access_management_iam_software_with_egeetouch_commercial_app">An EXCLUSIVE offer for EXISTING eGeeTouch Manager APP users to UPGRADE for FREE to COMMERCIAL GRADE Intelligent Access Management (IAM) Software with eGeeTouch Commercial APP.</string>
    <string name="and">and</string>
    <string name="androidx_startup">androidx.startup</string>
    <string name="app_name">eGeeTouch</string>
    <string name="app_version">App Version:</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="are_you_sure_power_off_lock">Are you sure you want to shut down eGeeTouch?</string>
    <string name="are_you_sure_you_want_to_delete">Are you sure you want to delete ?</string>
    <string name="are_you_sure_you_want_to_delete_jp">Are you sure you want to remove</string>
    <string name="are_you_sure_you_want_to_quit">Are you sure you want to quit?</string>
    <string name="are_you_sure_you_want_to_share">Are you sure you want to share</string>
    <string name="as_new_name">as new name?</string>
    <string name="audit_backup_message">Your Audit logs will be back up to server and you can view it from Web base management system</string>
    <string name="audit_msg">This feature enables you to trace your eGeeTouch access history.</string>
    <string name="audit_trail">Audit Trail</string>
    <string name="authentcation_err_email_content">\n\n\n\n\n Sent from my Android device</string>
    <string name="authentcation_err_email_sub">Primary password issue</string>
    <string name="authentication_error">This is a primary password error \n\nFor security purpose,please contact eGeeTouch Customer support directly at support@egeetouch.com or click button below</string>
    <string name="authentication_error_content">Please contact eGeeTouch Customer support directly at support@egeetouch.com or click button below</string>
    <string name="authentication_error_title">Reset primary password</string>
    <string name="auto_locking">Auto-locking</string>
    <string name="auto_reconnecting_10s">10 Sec</string>
    <string name="auto_reconnecting_15s">15 Sec</string>
    <string name="auto_reconnecting_20s">20 Sec</string>
    <string name="auto_reconnecting_25s">25 Sec</string>
    <string name="auto_scanning">Auto searching &amp; pairing with eGeeTouch lock. To activate bluetooth mode, short press (&lt;1 second) on the lock.</string>
    <string name="auto_scanning2">Power On your Smart Padlock as shown below</string>
    <string name="auto_scanning_mgs">Power On your Smart Padlock as shown below</string>
    <string name="auto_shut_down_in">Auto shutdown in</string>
    <string name="auto_shut_down_triggered">Auto shut down completed.\nLock is powered OFF.</string>
    <string name="auto_shutdown_setting_off">Auto shutdown setting OFF</string>
    <string name="auto_unlocking">Auto-unlocking</string>
    <string name="back">BACK</string>
    <string name="back_up_audit_trail_from_lock">Do you want to back up Audit Trail from lock?</string>
    <string name="backup_audittrail">Your Audit Trail has not updated. To download and view your latest Audit Trail. Please  click here </string>
    <string name="battery_abnormal">Your battery appears to have lost its power. \n\nPlease change new batteries</string>
    <string name="battery_abnormal_title">Notification</string>
    <string name="before_repair_msg">Are you sure you want to start repairing? This will try to connect to an affected lock.</string>
    <string name="before_update_msg1">Before you start firmware update, please make sure that:</string>
    <string name="before_update_msg2">Your internet and Bluetooth connection stay active throughout the entire update process.</string>
    <string name="before_update_msg2_2">Make sure that your internet and Bluetooth connection stay active throughout the entire update process.</string>
    <string name="before_update_msg3">Keep your currently connected lock to a charger (in charging state) throughout the entire update process.</string>
    <string name="before_update_msg4">It is recommended to not force close this app unless the update process is stuck for an extended period of time.</string>
    <string name="before_update_msg5">If the affected lock is unresponsive with teal LED color, please wait until the LED color turn green.</string>
    <string name="blocked">BLOCKED</string>
    <string name="cancel">Cancel</string>
    <string name="cannot_access_account">Cannot access your account?</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="contact">Contact</string>
    <string name="create_an_account">New here? Create an account?</string>
    <string name="dont_show_me_this_again">Don\'t show me again!</string>
    <string name="egeetouch_is_schedule_to_disconnect_shortly">eGeeTouch is scheduled to disconnect shortly!</string>
    <string name="email">Email Address</string>
    <string name="enter_user_name">1.) Enter user name:</string>
    <string name="faq">FAQ</string>
    <string name="firmware_repair">Firmware Repair</string>
    <string name="forgot_your_password_q">Forget password?</string>
    <string name="key_in_password">2.) Key in password:</string>
    <string name="login">Login</string>
    <string name="login_egeetouch">Login to your eGeeTouch Account</string>
    <string name="login_to_my_acc">Login to my account</string>
    <string name="logout">Logout</string>
    <string name="news_and_updates">News &amp; Updates</string>
    <string name="off">OFF</string>
    <string name="ok">OK</string>
    <string name="on">ON</string>
    <string name="password">Password</string>
    <string name="privacy_terms">Privacy Policy</string>
    <string name="remember_me">Remember Me</string>
    <string name="remember_me_q">Remember Me?</string>
    <string name="save">Save</string>
    <string name="select_skip_and_explore">**Select \"SKIP AND EXPLORE\" button below if no internet service is available or you do not wish to create account with us. It is highly encouraged to create and login your account so that you are able to recover your lock details if you lose them in future.</string>
    <string name="share_add_friend">Add Recipient</string>
    <string name="share_email">Email</string>
    <string name="share_name">Name</string>
    <string name="share_user_email">Step 2: Enter Recipient\'s Email</string>
    <string name="share_user_name">Step 1: Enter Recipient\'s Name</string>
    <string name="shop">Shop</string>
    <string name="sign_up2">Sign Up?</string>
    <string name="skip_and_explore">SKIP AND EXPLORE</string>
    <string name="tutorial">Tutorial Video</string>
    <string name="tutorial_manual">Tutorial Manual</string>
    <string name="unlock_successful">Unlocked Successful</string>
    <string name="user_name">User Name</string>
</resources>