<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="wrap_content" android:layout_height="wrap_content">
    <LinearLayout android:orientation="vertical" android:background="@drawable/rounded_bg" android:padding="20dp" android:layout_width="match_parent" android:layout_height="wrap_content" app:layout_constraintBottom_toBottomOf="0" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toTopOf="0">
        <TextView android:textSize="20sp" android:textStyle="bold" android:textColor="@color/cmd_text" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/unlock_successful" android:textAlignment="center"/>
        <TextView android:textSize="18sp" android:textColor="@color/cmd_text" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="20dp" android:text="@string/egeetouch_is_schedule_to_disconnect_shortly" android:textAlignment="center"/>
        <Button android:textSize="15sp" android:textColor="@color/white" android:id="@+id/btn_dont_remind" android:layout_width="match_parent" android:layout_height="55dp" android:layout_marginTop="20dp" android:text="@string/dont_show_me_this_again" android:backgroundTint="@color/blossomred"/>
        <Button android:textSize="15sp" android:textColor="@color/white" android:id="@+id/btn_ok" android:layout_width="match_parent" android:layout_height="55dp" android:text="@string/ok"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
