<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" android:orientation="vertical" android:layout_width="match_parent" android:layout_height="match_parent">
    <LinearLayout android:orientation="vertical" android:focusableInTouchMode="true" android:clickable="true" android:layout_width="match_parent" android:layout_height="match_parent">
        <TextView android:textAppearance="?android:attr/textAppearanceLarge" android:textSize="18sp" android:textColor="@color/white" android:gravity="center" android:id="@+id/textView_username" android:background="@color/cyanblue" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="10dp" android:text="@string/enter_user_name"/>
        <EditText android:textSize="16sp" android:id="@+id/editText_newusername" android:background="@drawable/border" android:paddingLeft="10dp" android:layout_width="match_parent" android:layout_height="35dp" android:layout_marginLeft="10dp" android:layout_marginTop="15dp" android:layout_marginRight="10dp" android:hint="@string/user_name" android:ems="10" android:maxLength="14" android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz1234567890 "/>
        <LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="20dp" android:layout_marginBottom="20dp">
            <TextView android:textAppearance="?android:attr/textAppearanceLarge" android:textSize="18sp" android:textColor="@color/white" android:gravity="center" android:id="@+id/textView_userpassword" android:background="@color/cyanblue" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/key_in_password"/>
            <EditText android:textSize="16sp" android:id="@+id/editText_userpassword" android:background="@drawable/border" android:paddingLeft="10dp" android:layout_width="match_parent" android:layout_height="35dp" android:layout_marginLeft="10dp" android:layout_marginTop="15dp" android:layout_marginRight="10dp" android:hint="@string/password" android:ems="10" android:maxLength="6" android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz1234567890 " android:inputType="textPassword"/>
            <EditText android:textSize="16sp" android:id="@+id/editText_userpassword2" android:background="@drawable/border" android:paddingLeft="10dp" android:layout_width="match_parent" android:layout_height="35dp" android:layout_marginLeft="10dp" android:layout_marginTop="10dp" android:layout_marginRight="10dp" android:hint="@string/confirm_password" android:ems="10" android:maxLength="6" android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz1234567890 " android:inputType="textPassword"/>
        </LinearLayout>
        <Button android:textStyle="bold" android:textColor="@color/white" android:id="@+id/Button_save_newuser" android:background="@drawable/mybutton" android:layout_width="match_parent" android:layout_height="40dp" android:layout_marginLeft="10dp" android:layout_marginRight="10dp" android:text="@string/save" android:onClick="btn_save_newUser"/>
    </LinearLayout>
</LinearLayout>
