<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" android:gravity="center_horizontal" android:orientation="vertical" android:background="@color/white" android:layout_width="match_parent" android:layout_height="match_parent">
    <TextView android:textAppearance="@style/TextAppearance.AppCompat.Large" android:textSize="26sp" android:textStyle="bold" android:textColor="@color/cyanblue" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="20dp" android:layout_marginTop="30dp" android:layout_marginRight="20dp" android:text="@string/login_egeetouch" android:textAlignment="center"/>
    <ScrollView android:layout_width="match_parent" android:layout_height="wrap_content">
        <LinearLayout android:gravity="center_horizontal" android:orientation="vertical" android:id="@+id/LinearLayout_login_defocus_editbox" android:layout_width="match_parent" android:layout_height="match_parent" android:layout_marginLeft="10dp" android:layout_marginRight="10dp">
            <LinearLayout android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content">
                <ImageView android:layout_gravity="center_vertical" android:background="@drawable/ic_mail_outline_black_24dp" android:layout_width="25dp" android:layout_height="25dp" android:layout_marginStart="10dp" android:backgroundTint="@color/cyanblue"/>
                <com.google.android.material.textfield.TextInputLayout android:textColorHint="@color/ligth_grey" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="10dp" android:layout_marginTop="8dp" android:layout_marginBottom="8dp" app:hintTextAppearance="@style/TextInputLayout_appearance">
                    <EditText android:id="@+id/editText_login_email" android:layout_width="match_parent" android:layout_height="40dp" android:hint="@string/email" android:inputType="textEmailAddress" android:backgroundTint="@color/cyanblue" style="@style/TextInputLayout_appearance"/>
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>
            <LinearLayout android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content">
                <ImageView android:layout_gravity="center_vertical" android:background="@drawable/ic_lock_outline_black_24dp" android:layout_width="25dp" android:layout_height="25dp" android:layout_marginStart="10dp" android:backgroundTint="@color/cyanblue"/>
                <com.google.android.material.textfield.TextInputLayout android:textColorHint="@color/ligth_grey" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="10dp" android:layout_marginTop="8dp" android:layout_marginBottom="8dp" app:hintTextAppearance="@style/TextInputLayout_appearance">
                    <EditText android:textColorHint="@color/white" android:id="@+id/editText_login_password" android:layout_width="match_parent" android:layout_height="wrap_content" android:hint="@string/password" android:inputType="textPassword" android:backgroundTint="@color/cyanblue" style="@style/TextInputLayout_appearance"/>
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>
            <Button android:textAppearance="@style/TextInputLayout_appearance" android:textSize="22sp" android:textColor="@color/white" android:id="@+id/btn_login" android:background="@drawable/button_shape" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="10dp" android:layout_marginTop="10dp" android:layout_marginRight="10dp" android:text="@string/login_to_my_acc" android:onClick="btn_login"/>
            <Switch android:layout_gravity="right" android:id="@+id/switch_rmb_login" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="10dp" android:layout_marginBottom="10dp" android:checked="false" android:textOn="@string/on" android:textOff="@string/off" android:text="@string/remember_me_q"/>
            <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="16dp" android:layout_marginBottom="15dp">
                <TextView android:textAppearance="@style/TextInputLayout_appearance" android:textSize="18sp" android:textColor="@color/text_color" android:id="@+id/btn_fgt" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="15dp" android:text="@string/forgot_your_password_q" android:layout_weight="1" android:onClick="btn_forgotpassword"/>
                <TextView android:textAppearance="@style/TextInputLayout_appearance" android:textSize="18sp" android:textColor="@color/text_color" android:gravity="right" android:id="@+id/btn_signup" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="15dp" android:text="@string/sign_up2" android:layout_weight="1" android:onClick="btn_CreateAccount"/>
            </LinearLayout>
            <TextView android:textAppearance="@style/TextInputLayout_appearance" android:textSize="18sp" android:textColor="@color/text_color" android:visibility="gone" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="16dp" android:text="@string/cannot_access_account" android:onClick="btn_forgotpassword" android:textAlignment="center"/>
        </LinearLayout>
    </ScrollView>
    <LinearLayout android:gravity="bottom" android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_weight="1">
        <TextView android:textAppearance="@style/TextInputLayout_appearance" android:textSize="18sp" android:textColor="@color/text_color" android:gravity="bottom" android:layout_gravity="" android:visibility="gone" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="10dp" android:layout_marginRight="10dp" android:layout_marginBottom="10dp" android:text="@string/create_an_account" android:onClick="btn_CreateAccount" android:textAlignment="center"/>
        <ImageView android:layout_gravity="right" android:layout_width="100dp" android:layout_height="40dp" android:layout_marginLeft="10dp" android:layout_marginRight="10dp" android:layout_marginBottom="5dp" android:src="@drawable/egeetouch_logo" android:layout_alignParentRight="true" android:layout_alignParentBottom="true" app:layout_constraintBottom_toBottomOf="0" app:layout_constraintRight_toRightOf="0"/>
    </LinearLayout>
</LinearLayout>
