<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" android:orientation="vertical" android:background="@color/white" android:layout_width="match_parent" android:layout_height="match_parent">
    <RelativeLayout android:layout_width="match_parent" android:layout_height="wrap_content">
        <ListView android:scrollbarAlwaysDrawVerticalTrack="true" android:id="@+id/listview_userlist" android:layout_width="match_parent" android:layout_height="match_parent" android:layout_alignParentTop="true" android:layout_alignParentStart="true"/>
        <LinearLayout android:gravity="center" android:orientation="vertical" android:id="@+id/LinearLayout_add_user" android:background="@color/white" android:padding="10dp" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="40dp" android:layout_centerHorizontal="true" android:elevation="12dp">
            <TextView android:textSize="22sp" android:textColor="@color/white" android:id="@+id/textView_add_user_title" android:background="@color/cyanblue" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginBottom="15dp" android:text="@string/share_add_friend" android:layout_weight="1" android:textAlignment="center"/>
            <TextView android:textSize="18sp" android:id="@+id/textView_user_name" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/share_user_name" android:layout_weight="1"/>
            <EditText android:textSize="20sp" android:id="@+id/editText_user_name" android:background="@drawable/border" android:paddingLeft="8dp" android:paddingTop="5dp" android:paddingRight="8dp" android:paddingBottom="5dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="3dp" android:layout_marginBottom="10dp" android:hint="@string/share_name" android:ems="10" android:maxLength="12" android:layout_weight="1" android:inputType="textPersonName"/>
            <TextView android:textSize="18sp" android:id="@+id/textView_user_password" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/share_user_email" android:layout_weight="1"/>
            <EditText android:textSize="20sp" android:id="@+id/editText_user_email" android:background="@drawable/border" android:paddingLeft="8dp" android:paddingTop="5dp" android:paddingRight="8dp" android:paddingBottom="5dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="3dp" android:hint="@string/share_email" android:ems="10" android:layout_weight="1" android:inputType="textPersonName"/>
            <LinearLayout android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="match_parent" android:layout_marginTop="15dp" android:layout_weight="1">
                <TextView android:textSize="18sp" android:textStyle="bold" android:textColor="@color/blossomred" android:id="@+id/textView_cancel_add_user" android:clickable="true" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginRight="6dp" android:text="@string/cancel" android:layout_weight="1" android:onClick="btn_cancel_add_user" android:textAlignment="textEnd"/>
                <TextView android:textSize="18sp" android:textStyle="bold" android:textColor="@color/cyanblue" android:id="@+id/textView_add_user" android:clickable="true" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginRight="6dp" android:text="@string/add_user" android:layout_weight="1" android:onClick="btn_share_add_new_user" android:textAlignment="textEnd"/>
            </LinearLayout>
        </LinearLayout>
        <ImageView android:id="@+id/imageView_add_user" android:layout_width="60dp" android:layout_height="60dp" android:layout_marginTop="5dp" android:layout_marginBottom="5dp" android:src="@drawable/add_user" android:layout_alignParentBottom="true" android:layout_centerHorizontal="true" android:onClick="btn_add_user_icon" android:layout_alignParentEnd="false" android:elevation="8dp"/>
    </RelativeLayout>
</LinearLayout>
